Fix css issue in responsive table to allow overflow for very long texts

--- a/client/src/resources/styles/custom.scss
+++ b/client/src/resources/styles/custom.scss
@@ -519,3 +519,6 @@ select {
   width: 100%;
   height: 100%;
 }
+.table-responsive {
+  overflow: auto;
+}
